--- a/radial-style.css
+++ b/radial-style.css
@@ -5,7 +5,7 @@ body,html{
 }
 body{
 	background: #E3DFD2;
-	background-image: url(assets/first\ holding\ hands.jpeg);
+	background-image: url('assets/her.PNG');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
