--- a/radial-style.css
+++ b/radial-style.css
@@ -94,7 +94,7 @@ a:nth-child(5)
 	box-shadow: 0 0 0 5vmin #E3DfD2;
 }
 a:nth-child(5) div{
-	background-image: url('assets/holding\ handa.jpeg');
+	background-image: url('assets/first\ holding\ hands.jpeg');
 }
 
 span{
