--- a/radial-style.css
+++ b/radial-style.css
@@ -32,7 +32,7 @@ a{
 }
 a div{
 	height: 100%;
-	/* position: relative; */
+	position: relative;
 	/* top: -10px; */
 	background-size: cover;
 	opacity: .5;
