--- a/radial-style.css
+++ b/radial-style.css
@@ -2,6 +2,7 @@ body,html{
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	overflow-x: hidden;
 }
 body{
 	background: #E3DFD2;
@@ -11,15 +12,29 @@ body{
 	background-position: center;
 	box-shadow: inset 0 0 20vmin 0 #585247;
 }
-.wrap{
-	position: relative;
-	width: 80vmin;
-	height: 80vmin;
-	background: transparent;
-	transform: scale(0.2) translateZ(0px);
-	opacity: 0;
-	transition: transform .5s, opacity .5s;
-	margin: 0 auto;
+@media only screen and (max-width: 600px) {
+    body {
+        background-size: cover;
+        background-position: top center;
+    }
+}
+
+.wrap {
+    position: relative;
+    width: 80vmin;
+    height: 80vmin;
+    background: transparent;
+    transform: scale(0.5); /* Adjust initial scale */
+    opacity: 0;
+    transition: transform .5s, opacity .5s;
+    margin: 0 auto;
+}
+@media only screen and (max-width: 600px) {
+    .wrap {
+        width: 65vmin; /* Smaller size for smaller devices */
+        height: 65vmin;
+        transform: scale(0.7); /* Adjust for better view on mobile */
+    }
 }
 
 a{
@@ -142,4 +157,28 @@ transform: scale(1) translateZ(0px);
 a:hover div{
 	opacity: 1;
 	transform: translateZ(0px);
+}
+@media only screen and (max-width: 600px) {
+    a {
+        width: 40%; /* Reduce size for iPhones */
+        height: 40%;
+    }
+
+    a:nth-child(5) {
+        width: 50%; /* Adjust central circle size */
+        height: 50%;
+        top: 25%;
+        left: 25%;
+    }
+
+    /* Adjust hover scaling for smaller screens */
+    span:hover + .wrap, .wrap:hover {
+        transform: scale(0.9) translateZ(0px);
+    }
+
+    span {
+        top: 50vmin; /* Center on small screens */
+        width: 12vmin;
+        height: 12vmin;
+    }
 }
