--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1315,14 +1315,15 @@ audio {
         width: 80px;  /* Adjust size for smaller screens */
         height: auto; /* Keep the aspect ratio */
         bottom: 0;    /* Adjust bottom position */
-        opacity: 1;   /* Make sure the balloons are visible */
+        opacity: 0;   /* Make sure the balloons are visible */
         z-index: 10;  /* Ensure balloons appear above other elements */
+	display: block;
     }
 
-    .balloons h2 {
+/*     .balloons h2 {
         font-size: 14px;  /* Adjust font size for smaller screens */
         display: block;   /* Ensure text is displayed if any */
-    }
+    } */
 
     /* Specific balloon adjustments */
     #b1, #b2, #b3, #b4, #b5, #b6, #b7 {
