--- a/radial-style.css
+++ b/radial-style.css
@@ -66,7 +66,7 @@ a:nth-child(2) {
 	transition: transform .4s .2s;
 }
 a:nth-child(2) div{
-	background-image:url('assets/heart\ car\ image.jpeg');
+	background-image:url('assets/right_face.PNG');
 	background-size: 150%;
 	background-position: center;
 }
@@ -78,7 +78,7 @@ a:nth-child(3) {
 	transition: transform .4s .25s;
 }
 a:nth-child(3) div{
-	background-image:url('assets/restro\ image.jpeg');
+	background-image:url('assets/vid_ss.PNG');
 	background-size: 150%;
 	background-position: center;
 }
